# mailprune

./: Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: release.yml
src/: config.rs  imap_client.rs  main.rs  stacks.rs  unsubscribe.rs
src/ui/: app.rs  view.rs
