[package]
name = "mailprune"
version = "0.1.1"
edition = "2024"
description = "Email triage TUI — stack your inbox by sender, bulk trash/archive/unsubscribe"
license = "MIT"
repository = "https://github.com/niraj8/mailprune"

[dependencies]
anyhow = "1.0.102"
async-imap = { version = "0.11.2", default-features = false, features = ["runtime-tokio"] }
chrono = "0.4.45"
crossterm = { version = "0.29.0", features = ["event-stream"] }
dirs = "6.0.0"
futures = "0.3.32"
lettre = { version = "0.11.22", default-features = false, features = ["tokio1-rustls", "smtp-transport", "builder", "aws-lc-rs", "webpki-roots"] }
mailparse = "0.16.1"
open = "5.3.5"
ratatui = "0.30.0"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "http2"] }
rpassword = "7.5.4"
rustls-pki-types = "1.14.1"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
tokio-rustls = "0.26.4"
toml = "1.1.2"
webpki-roots = "1.0.7"

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6.3", features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6.3", features = ["sync-secret-service"] }

[target.'cfg(windows)'.dependencies]
keyring = { version = "3.6.3", features = ["windows-native"] }

[profile.release]
strip = true
lto = true
